--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/manav-05-06/Manav.git",
+  
   "name": "my-portfolio",
   "private": true,
   "version": "0.0.0",
@@ -8,9 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-   "deploy": "gh-pages -d build"
+    "preview": "vite preview"
+
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
